<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimaryDark"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="35dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <com.github.siyamed.shapeimageview.CircularImageView
                android:layout_marginTop="50dp"
                android:id="@+id/imageView"
                android:layout_gravity="center_vertical"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/logo_un"
                app:siBorderWidth="6dp"/>

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/imageView"
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nav_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/nav_slogam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/un_moto" />

            <TextView
                android:id="@+id/nav_moto"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/un_moto2" />

        </LinearLayout>



    </RelativeLayout>



</LinearLayout>
